--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "author": "Pooja Mulik <poojamulik34@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@types/node": "^22.0.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.8.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.18.0"
   }
 }
